--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>javax.servlet.jsp</groupId>
+	  <artifactId>javax.servlet.jsp-api</artifactId>
+	  <version>2.3.0</version>
+	 </dependency>
 	</dependencies>
 	<profiles>
 		<profile>
