--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,46 @@
 	  <artifactId>javax.servlet.jsp-api</artifactId>
 	  <version>2.3.0</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-core</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-el</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-extras</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-faces</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-mailreader-dao</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-scripting</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-taglib</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.struts</groupId>
+	  <artifactId>struts-tiles</artifactId>
+	  <version>1.3.10</version>
+	 </dependency>
 	</dependencies>
 	<profiles>
 		<profile>
