--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
    <welcome-file-list>
-        <welcome-file>MainView.jsp</welcome-file>
+        <welcome-file>Login.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
 
